# neurotin-analysis

./: .codespellignore  .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-style.yml  flake8.yml
evamed/: bdi.py  paths.ini  psqi.py  stai.py  thi.py  utils.py  whodas.py
logs/: mml.py  scores.py  utils.py
model/: utils.py
model/utils/: checks.py  load_model.py
neurotin/: __init__.py  _version.py  logger.py
neurotin/commands/: __init__.py  main.py  neurotin_band_power.py  neurotin_band_power_onrun.py  neurotin_io_apply_proj.py  neurotin_io_convert2eeglab.py  neurotin_logs_mml.py  neurotin_model_avg.py  neurotin_model_compute_average.py  neurotin_pp_bads.py  neurotin_pp_ica.py  neurotin_pp_meas_info.py  neurotin_pp_prepare_raw.py  neurotin_pp_validation_ica.py  neurotin_pp_validation_ica_sources.py  neurotin_preprocess.py  neurotin_psd_avg_band.py  neurotin_tfr_compute_psd_average_bins.py
neurotin/config/: __init__.py  events.py  participants.py  paths.ini  srv.py
neurotin/evamed/: __init__.py  parsers.py  paths.ini  thi.py  utils.py  viz.py
neurotin/evamed/parsers/: __init__.py  bdi.py  psqi.py  stai.py  thi.py  visit_evaluation_participant.py  whodas.py
neurotin/evamed/parsers_old/: __init__.py  stai.py  whodas.py
neurotin/io/: __init__.py  apply_proj.py  cli.py  cli_results.py  convert2eeglab.py  csv.py  list_files.py  logs.py  model.py  read_raw_fif.py
neurotin/logs/: __init__.py  _check_participants.py  mml.py  scores.py
neurotin/microstates/: __init__.py
neurotin/model/: __init__.py  average.py  dataframe.py  norm.py  viz.py
neurotin/preprocessing/: __init__.py  bad_channels.py  bads.py  bridge.py  events.py  filters.py  ica.py  meas_info.py  prepare_raw.py  preprocessing.py  stats.py
neurotin/preprocessing/validation/: __init__.py  ica.py
neurotin/psd/: __init__.py  average.py  blocks.py  diff.py  epochs.py  psd.py  ratio.py  viz.py  weights.py
neurotin/psd/participant/: __init__.py
neurotin/psd/session/: viz.py
neurotin/tfr/: __init__.py  epochs.py  psd.py
neurotin/time-frequency/: epochs.py  psd.py  utils.py
neurotin/time_frequency/: __init__.py  average.py  band_power.py  epochs.py  plots.py  psd.py  ratio.py  tfr.py  viz.py  weights.py
neurotin/utils/: _checks.py  _docs.py  align_axes.py  checks.py  docs.py  list_files.py  list_runs.py  selection.py
preprocessing/: _bad_channels.py  _events.py  _filters.py  annotations.py  bad_channels.py  check_ica.py  cli.py  convert2eeglab.py  events.py  filters.py  ica.py  meas_info.py  pipeline-auto.py  pipeline-semi-auto.py  pipeline.py  pipeline_auto.py  pipeline_auto_multiproc.py  pipeline_semiauto.py  prepare_raw  prepare_raw.py  utils.py
preprocessing/utils/: __init__.py  checks.py  exclusion.py  list_files.py  read_raw_fif.py
scripts/evamed/: barplot_clinical.py  boxplots_clinical.py  lineplots_thi.py  thi.py
scripts/local/: viz.py
scripts/model/: average.py
scripts/psd/: captlot_success_distribution.py  joint_clinical_nfb_performance.py  topomap_regulation.py
scripts/tfr/: joint_clinical_nfb_performance.py  psd.py
time-frequency/: psd.py  utils.py
(+37 files in other folders)
